--- a/app/views/companies/_complaintCompanyForm.html.erb
+++ b/app/views/companies/_complaintCompanyForm.html.erb
@@ -21,9 +21,13 @@
     <%= f.text_area :description %>
   </div>
 
+  <input type="hidden" name="user_id" value="<%= current_user.id %>">
+  <input type="hidden" name="company_id" value="<%= company_id %>">
+
+
   <div class="actions">
-    <%#= f.submit %>
+    <%= f.submit %>
     <%#= link_to "Create Complaint", "", class: "btn btn-primary" %>
-    <%= link_to 'Create Complaint',new_complaint_companies_path(complaint_name: complaint.name, complaint_description: complaint.description),class: 'btn btn-primary' %>
+    <%#= link_to 'Create Complaint',new_complaint_companies_path(complaint_name: complaint.name, complaint_description: complaint.description),class: 'btn btn-primary' %>
   </div>
 <% end %>
