--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -2,3 +2,6 @@
 Total Companies: <%= @companies %>
 Total Users: <%= @users %>
 Total Complaints: <%= @complaints %>
+
+
+<h3><a href="<%= companies_path %>">COMPANIES</a></h3>
