--- a/app/views/complaints/_form.html.erb
+++ b/app/views/complaints/_form.html.erb
@@ -20,10 +20,13 @@
     <%= f.label :description %>
     <%= f.text_area :description %>
   </div>
+  
+  <input type="hidden" name="user_id" value="<%= current_user.id %>">
+  <input type="hidden" name="company_id" value="<%= company_id %>">
 
   <div class="actions">
-    <#%= f.submit %>
-    <%= link_to "Create Complaint", "", class: "btn btn-primary" %>
-    <%= link_to 'Create Complaint',new_collection_companies_path(complaint_name: complaint_name, complaint_description: complaint_description),class: 'btn btn-primary' %>
+    <%= f.submit %>
+    <%# link_to "Create Complaint", "", class: "btn btn-primary" %>
+    <%# link_to 'Create Complaint',new_collection_companies_path(complaint_name: complaint_name, complaint_description: complaint_description),class: 'btn btn-primary' %>
   </div>
 <% end %>
