--- a/app/views/companies/_complaintCompanyForm.html.erb
+++ b/app/views/companies/_complaintCompanyForm.html.erb
@@ -24,7 +24,7 @@
   <% if current_user.present? %>
     <input type="hidden" name="user_id" value="<%= current_user.id %>">
   <% end %>
-  <input type="hidden" name="company_id" value="<%= company_id %>">
+  <input type="hidden" name="company_id" value="<%= @company_id %>">
 
 
   <div class="actions">
