--- a/app/views/companies/show.html.erb
+++ b/app/views/companies/show.html.erb
@@ -34,4 +34,4 @@
 
 <br>
 <h3>New Complaint AJAX</h3>
-<p><%= render 'complaintCompanyForm', complaint: @complaint %></p>
+<p><%= render 'complaintCompanyForm', complaint: @complaint, company: @company, user: current_user %></p>
